--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <!--Nav Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><i class="fa-solid fa-house"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,15 +42,15 @@
 				    {% if user.is_authenticated %}
               <!--Logout-->
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'Auth:logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                <a class="nav-link" href="{% url 'Auth:logout' %}">Logout</a>
               </li>
             {% else %}
             <!--Login/Register-->
               <li class="nav-item">
-                <a class="nav-link" href="">Register</a>
+                <a class="nav-link" href="{% url 'Auth:registration_form' %}">Register</a>
               </li>
 				      <li class="nav-item">
-					      <a class="nav-link" href="{% url 'Auth:login_form' %}"><i class="fas fa-sign-in-alt"></i>Login</a>
+					      <a class="nav-link" href="{% url 'Auth:login_form' %}">Login</a>
 				      </li>
             {% endif %}
           </ul>
@@ -61,7 +61,7 @@
 	  {% if messages %}
 	    <div class="text-center messages">
 		  {% for message in messages %} 
-        {{ message }} 
+        {{ message |safe }} 
       {% endfor %}
 	    </div>
 	{% endif %}
@@ -73,5 +73,6 @@
     <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="{% static 'js/common.js' %}"></script>
+    {% block pageScript %}{% endblock %}
 </body>
 </html>
