view opportunities implmented

--- a/Auth/templates/register.html
+++ b/Auth/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 {% block page_title %}Register{% endblock %} 
 {% block content %}
-<div id="loginFormWrap">
+<div id="authFormWrap">
     <div class="formIcon">
         <i class="fas fa-user"></i>
         <span>Register</span>
