--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -2,13 +2,13 @@
 
 /*Auth Styling*/
 /*Login Page */
-#loginFormWrap {
+#authFormWrap {
     width: 70%;
     margin: 3em auto 0 auto;
     padding: .2em;
 }
 
-#loginFormWrap .formIcon {
+#authFormWrap .formIcon {
     font-size: 4em;
     padding: 1em;
     text-align: center;
