--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,4 +1,9 @@
 /*Generic Styling*/
+#pageMessages {
+    color: white;
+    text-align: center;
+    background-color: green;
+}
 
 /*Auth Styling*/
 /*Login Page */
