--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Properties</a>
+              <a class="nav-link" href="#">Overview</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Overview</a>
+              <a class="nav-link active" aria-current="page" href="{% url 'property:view_opportunities' %}">Properties</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -58,19 +58,17 @@
       </div>
     </nav>
     <!--If messages are passed into template-->
-	  {% if messages %}
-	    <div class="text-center messages">
-		  {% for message in messages %} 
-        {{ message |safe }} 
-      {% endfor %}
-	    </div>
-	{% endif %}
+    <div id="pageMessages">
+    {% for message in messages %} 
+      {{ message |safe }} 
+    {% endfor %}
+    </div>
     <div class="pageContainer">
         {% block content %}{% endblock %}
     </div>
 
     <!--JS Script References-->
-    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="{% static 'js/common.js' %}"></script>
     {% block pageScript %}{% endblock %}
