Dynamic Substage Check implemented

--- a/Property/templates/viewMulti.html
+++ b/Property/templates/viewMulti.html
@@ -89,5 +89,5 @@
 </div>
 {% endblock %}
 {% block pageScript %}
-<script src="../../static/js/opportunity.js"></script>
+<script src="../../static/js/opportunities.js"></script>
 {% endblock %}
