--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -118,7 +118,6 @@
     height: 3em;
     width: 100%;
     border: .1em solid black;
-    border-radius: 8%;
 }
 
 .oppWrap .ForSaleBtn {
@@ -143,7 +142,7 @@
 .oppWrap .SaleAgreedBtn:hover,
 .oppWrap .SaleAgreedBtn:focus {
     background-color: white;
-    color: #A654F0;;
+    color: #A654F0;
     cursor: pointer;
 }
 
@@ -192,4 +191,30 @@
 .oppWrap .timelineStep .substageField select,
 .oppWrap .timelineStep .substageField input {
     width:100%;
+}
+
+.oppWrap .subStageWrap {
+    margin: 1em 0;
+}
+
+.oppWrap .subStageWrapItem {
+    padding: .3em;
+    border: .1em solid black;
+    border-radius: 8px;
+}
+
+.oppWrap #saleAgreedSubStageWrap {
+    background-color:#A654F0;;
+}
+
+.oppWrap #contractsExchangedSubStageWrap {
+    background-color:#FF4AA0
+}
+
+.oppWrap .timeLineIcon {
+    font-size: 1.5em;
+    height: 100%;
+    text-align: center;
+    align-content: center;
+    color: green;
 }
