--- a/Property/templates/viewSingle.html
+++ b/Property/templates/viewSingle.html
@@ -355,12 +355,63 @@
             <div class="row">
                 <div class="noteDocBtnWrap">
                     <div class="col-sm-6">
-                        <button><i class="fa-regular fa-note-sticky"></i>Notes</button>
+                        <button id = 'viewNoteBtn'><i class="fa-regular fa-note-sticky"></i>Notes</button>
                     </div>
                     <div class="col-sm-6">
-                        <button><i class="fa-regular fa-file"></i>Documents</button>
+                        <button id = 'viewDocBtn'><i class="fa-regular fa-file"></i>Documents</button>
                     </div>
                 </div>
+            </div>
+            <div class="noteDocWrap">
+                <div id="noteWrap">
+                    <div id="newNoteArea">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6">
+                                <h5><span id = 'noteCounter'>{{notes|length}}</span><span> Notes</span></h5>
+                            </div>
+                            <div class="col-sm-12 col-md-6">
+                                <button id = 'addNoteBtn'>Add Note</button>
+                            </div>
+                        </div>
+                        <form method = 'POST' id = 'noteEntryForm'>
+                            <input type="text" id = 'noteTitle' class="form-control-plaintext" placeholder = 'Note Title'>
+                            <textarea class="form-control-plaintext" id = 'noteContent' placeholder = 'Note Content'></textarea>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <button type = 'button' id = 'cancelNoteBtn'>Cancel</button>
+                                </div>
+                                <div class="col-sm-6">
+                                    <button type = 'button' id = 'saveNoteBtn'>Save</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div id="existingNotes">
+                        {% for note in notes %}
+                            <form>
+                                <input type="text" value = '{{note.id}}' class = 'noteId' disabled hidden>
+                                <input type="text" class="form-control-plaintext noteTitle" value = '{{note.title}}' disabled>
+                                <textarea class="form-control-plaintext noteContent" value = '{{note.content}}' disabled>{{note.content}}</textarea>
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <button type = 'button' class = 'deleteNoteBtn'>
+                                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                            </button>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <button type = 'button' class = 'editNoteBtn'>
+                                                <i class="fas fa-edit"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                            </form>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div id="docWrap" hidden>
+                    <p>Documents here</p>
+                </div>
+                
             </div>
         </div>
     </div>
@@ -397,6 +448,25 @@
                     <div class="saveStageWrap">
                         <button id="saveStageBtn" class = "{{opportunity.stage|cut:' '}}Btn">Save changes</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--Note Deletion Modal-->
+    <div class="modal fade" id="noteDeleteModal" tabindex="-1" aria-labelledby="stageModal" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Are you sure you want to delete this note?</h5>
+                </div>
+                <div class="modal-body">
+                    <button id = 'cancelNoteDeletionBtn'>
+                        Cancel
+                    </button>
+                    <button id = 'confirmNoteDeletionBtn'>
+                        Confirm
+                    </button>
                 </div>
             </div>
         </div>
